2A/05_Projet_GL/src/test/deca/syntax/valid/SansObjet/19_PrintPlusieursExpr.deca
// Description:
//    Programme  print avec plusières argument, tlq chaine de caractère, int et float  
// Resultats:
//      programme correcte syntaxiquement
//
// Historique:
//    cree le 09/01/2024
{
    print("hello",3);
}