2A/05_Projet_GL/src/test/deca/syntax/invalid/SansObjet/09_ifSansCond.deca
// Description:
//    tests de programme if sans condition
//
// Resultats:
//    ligne 10  : Erreur,  mismatched input ')'
//
// Historique:
//    cree le 09/01/2024
{ 
    if(){
        print("hello world!");
    }
}